zetasql/parser/testdata/unpivot.test
# Simple UNPIVOT
# TODO: Remove no_show_parse_location_text after parse locations
# have been manually verified as correct.
[default no_show_parse_location_text]
SELECT * FROM t UNPIVOT (a FOR c IN (x, y));
--
QueryStatement [0-43]
  Query [0-43]
    Select [0-43]
      SelectList [7-8]
        SelectColumn [7-8]
          Star(*) [7-8]
      FromClause [9-43]
        TablePathExpression [14-43]
          PathExpression [14-15]
            Identifier(t) [14-15]
          UnpivotClause [16-43]
            PathExpressionList [25-26]
              PathExpression [25-26]
                Identifier(a) [25-26]
            PathExpression [31-32]
              Identifier(c) [31-32]
            UnpivotInItemList [36-42]
              UnpivotInItem [37-38]
                PathExpressionList [37-38]
                  PathExpression [37-38]
                    Identifier(x) [37-38]
              UnpivotInItem [40-41]
                PathExpressionList [40-41]
                  PathExpression [40-41]
                    Identifier(y) [40-41]
--
SELECT
  *
FROM
  t UNPIVOT(a FOR c IN ((x), (y)))
==

# Simple UNPIVOT with EXCLUDE NULLS
SELECT * FROM t UNPIVOT EXCLUDE NULLS (a FOR c IN (x, y));
--
QueryStatement [0-57]
  Query [0-57]
    Select [0-57]
      SelectList [7-8]
        SelectColumn [7-8]
          Star(*) [7-8]
      FromClause [9-57]
        TablePathExpression [14-57]
          PathExpression [14-15]
            Identifier(t) [14-15]
          UnpivotClause(EXCLUDE NULLS) [16-57]
            PathExpressionList [39-40]
              PathExpression [39-40]
                Identifier(a) [39-40]
            PathExpression [45-46]
              Identifier(c) [45-46]
            UnpivotInItemList [50-56]
              UnpivotInItem [51-52]
                PathExpressionList [51-52]
                  PathExpression [51-52]
                    Identifier(x) [51-52]
              UnpivotInItem [54-55]
                PathExpressionList [54-55]
                  PathExpression [54-55]
                    Identifier(y) [54-55]
--
SELECT
  *
FROM
  t UNPIVOT EXCLUDE NULLS (a FOR c IN ((x), (y)))
==

# Simple UNPIVOT with INCLUDE NULLS
SELECT * FROM t UNPIVOT INCLUDE NULLS (a FOR c IN (x, y));
--
QueryStatement [0-57]
  Query [0-57]
    Select [0-57]
      SelectList [7-8]
        SelectColumn [7-8]
          Star(*) [7-8]
      FromClause [9-57]
        TablePathExpression [14-57]
          PathExpression [14-15]
            Identifier(t) [14-15]
          UnpivotClause(INCLUDE NULLS) [16-57]
            PathExpressionList [39-40]
              PathExpression [39-40]
                Identifier(a) [39-40]
            PathExpression [45-46]
              Identifier(c) [45-46]
            UnpivotInItemList [50-56]
              UnpivotInItem [51-52]
                PathExpressionList [51-52]
                  PathExpression [51-52]
                    Identifier(x) [51-52]
              UnpivotInItem [54-55]
                PathExpressionList [54-55]
                  PathExpression [54-55]
                    Identifier(y) [54-55]
--
SELECT
  *
FROM
  t UNPIVOT INCLUDE NULLS (a FOR c IN ((x), (y)))
==

# Simple UNPIVOT with typo in EXCLUDE NULLS
SELECT * FROM t UNPIVOT EXCLUDE NULL (a FOR c IN (x, y));
--
ERROR: Syntax error: Expected keyword NULLS but got keyword NULL [at 1:33]
SELECT * FROM t UNPIVOT EXCLUDE NULL (a FOR c IN (x, y));
                                ^
==

# Simple UNPIVOT with single-element IN-list
SELECT * FROM t UNPIVOT(a FOR b IN (x));
--
QueryStatement [0-39]
  Query [0-39]
    Select [0-39]
      SelectList [7-8]
        SelectColumn [7-8]
          Star(*) [7-8]
      FromClause [9-39]
        TablePathExpression [14-39]
          PathExpression [14-15]
            Identifier(t) [14-15]
          UnpivotClause [16-39]
            PathExpressionList [24-25]
              PathExpression [24-25]
                Identifier(a) [24-25]
            PathExpression [30-31]
              Identifier(b) [30-31]
            UnpivotInItemList [35-38]
              UnpivotInItem [36-37]
                PathExpressionList [36-37]
                  PathExpression [36-37]
                    Identifier(x) [36-37]
--
SELECT
  *
FROM
  t UNPIVOT(a FOR b IN ((x)))
==

# Simple UNPIVOT with single-element IN-list with parentheses.
SELECT * FROM t UNPIVOT((a) FOR b IN (x));
--
QueryStatement [0-41]
  Query [0-41]
    Select [0-41]
      SelectList [7-8]
        SelectColumn [7-8]
          Star(*) [7-8]
      FromClause [9-41]
        TablePathExpression [14-41]
          PathExpression [14-15]
            Identifier(t) [14-15]
          UnpivotClause [16-41]
            PathExpressionList [25-26]
              PathExpression [25-26]
                Identifier(a) [25-26]
            PathExpression [32-33]
              Identifier(b) [32-33]
            UnpivotInItemList [37-40]
              UnpivotInItem [38-39]
                PathExpressionList [38-39]
                  PathExpression [38-39]
                    Identifier(x) [38-39]
--
SELECT
  *
FROM
  t UNPIVOT(a FOR b IN ((x)))
==

# Multiple output value columns in UNPIVOT
SELECT * FROM t UNPIVOT((a, b) FOR c IN ((x, y)));
--
QueryStatement [0-49]
  Query [0-49]
    Select [0-49]
      SelectList [7-8]
        SelectColumn [7-8]
          Star(*) [7-8]
      FromClause [9-49]
        TablePathExpression [14-49]
          PathExpression [14-15]
            Identifier(t) [14-15]
          UnpivotClause [16-49]
            PathExpressionList [25-29]
              PathExpression [25-26]
                Identifier(a) [25-26]
              PathExpression [28-29]
                Identifier(b) [28-29]
            PathExpression [35-36]
              Identifier(c) [35-36]
            UnpivotInItemList [40-48]
              UnpivotInItem [41-47]
                PathExpressionList [42-46]
                  PathExpression [42-43]
                    Identifier(x) [42-43]
                  PathExpression [45-46]
                    Identifier(y) [45-46]
--
SELECT
  *
FROM
  t UNPIVOT((a, b) FOR c IN ((x, y)))
==

# Columns with default and explicit string labels.
SELECT * FROM t UNPIVOT(a FOR e IN ((f), w AS '1', (x) '2', y "3"));
--
QueryStatement [0-67]
  Query [0-67]
    Select [0-67]
      SelectList [7-8]
        SelectColumn [7-8]
          Star(*) [7-8]
      FromClause [9-67]
        TablePathExpression [14-67]
          PathExpression [14-15]
            Identifier(t) [14-15]
          UnpivotClause [16-67]
            PathExpressionList [24-25]
              PathExpression [24-25]
                Identifier(a) [24-25]
            PathExpression [30-31]
              Identifier(e) [30-31]
            UnpivotInItemList [35-66]
              UnpivotInItem [36-39]
                PathExpressionList [37-38]
                  PathExpression [37-38]
                    Identifier(f) [37-38]
              UnpivotInItem [41-49]
                PathExpressionList [41-42]
                  PathExpression [41-42]
                    Identifier(w) [41-42]
                UnpivotInItemLabel [43-49]
                  StringLiteral('1') [46-49]
              UnpivotInItem [51-58]
                PathExpressionList [52-53]
                  PathExpression [52-53]
                    Identifier(x) [52-53]
                UnpivotInItemLabel [54-58]
                  StringLiteral('2') [55-58]
              UnpivotInItem [60-65]
                PathExpressionList [60-61]
                  PathExpression [60-61]
                    Identifier(y) [60-61]
                UnpivotInItemLabel [61-65]
                  StringLiteral("3") [62-65]
--
SELECT
  *
FROM
  t UNPIVOT(a FOR e IN ((f), (w) AS '1', (x) AS '2', (y) AS "3"))
==

# Column names with integer labels.
SELECT * FROM t UNPIVOT(a FOR e IN (w AS 1, x AS 2));
--
QueryStatement [0-52]
  Query [0-52]
    Select [0-52]
      SelectList [7-8]
        SelectColumn [7-8]
          Star(*) [7-8]
      FromClause [9-52]
        TablePathExpression [14-52]
          PathExpression [14-15]
            Identifier(t) [14-15]
          UnpivotClause [16-52]
            PathExpressionList [24-25]
              PathExpression [24-25]
                Identifier(a) [24-25]
            PathExpression [30-31]
              Identifier(e) [30-31]
            UnpivotInItemList [35-51]
              UnpivotInItem [36-42]
                PathExpressionList [36-37]
                  PathExpression [36-37]
                    Identifier(w) [36-37]
                UnpivotInItemLabel [38-42]
                  IntLiteral(1) [41-42]
              UnpivotInItem [44-50]
                PathExpressionList [44-45]
                  PathExpression [44-45]
                    Identifier(x) [44-45]
                UnpivotInItemLabel [46-50]
                  IntLiteral(2) [49-50]
--
SELECT
  *
FROM
  t UNPIVOT(a FOR e IN ((w) AS 1, (x) AS 2))
==

# Columns with labels that are of type double (neither int or string)
SELECT * FROM t UNPIVOT(a FOR e IN (w AS 1.1));
--
ERROR: Syntax error: Expected integer literal or string literal but got floating point literal "1.1" [at 1:42]
SELECT * FROM t UNPIVOT(a FOR e IN (w AS 1.1));
                                         ^
==

# Unpivot labels with NULL values
SELECT * FROM t UNPIVOT(a FOR e IN (w AS null));
--
ERROR: Syntax error: Expected integer literal or string literal but got keyword NULL [at 1:42]
SELECT * FROM t UNPIVOT(a FOR e IN (w AS null));
                                         ^
==

# Unpivot with negative integer labels.
SELECT * FROM KeyValue UNPIVOT(a for b in (Key as -1));
--
ERROR: Syntax error: Expected integer literal or string literal but got "-" [at 1:51]
SELECT * FROM KeyValue UNPIVOT(a for b in (Key as -1));
                                                  ^
==

# UNPIVOT on join input (comma join)
SELECT * FROM t1,t2 UNPIVOT(a for b IN (c));
--
QueryStatement [0-43]
  Query [0-43]
    Select [0-43]
      SelectList [7-8]
        SelectColumn [7-8]
          Star(*) [7-8]
      FromClause [9-43]
        Join(COMMA) [16-43]
          TablePathExpression [14-16]
            PathExpression [14-16]
              Identifier(t1) [14-16]
          TablePathExpression [17-43]
            PathExpression [17-19]
              Identifier(t2) [17-19]
            UnpivotClause [20-43]
              PathExpressionList [28-29]
                PathExpression [28-29]
                  Identifier(a) [28-29]
              PathExpression [34-35]
                Identifier(b) [34-35]
              UnpivotInItemList [39-42]
                UnpivotInItem [40-41]
                  PathExpressionList [40-41]
                    PathExpression [40-41]
                      Identifier(c) [40-41]
--
SELECT
  *
FROM
  t1,
  t2 UNPIVOT(a FOR b IN ((c)))
==

# UNPIVOT on join input (inner join)
SELECT * FROM t1 INNER JOIN t2 UNPIVOT(a for b IN (c)) USING(x);
--
QueryStatement [0-63]
  Query [0-63]
    Select [0-63]
      SelectList [7-8]
        SelectColumn [7-8]
          Star(*) [7-8]
      FromClause [9-63]
        Join(INNER) [17-63]
          TablePathExpression [14-16]
            PathExpression [14-16]
              Identifier(t1) [14-16]
          TablePathExpression [28-54]
            PathExpression [28-30]
              Identifier(t2) [28-30]
            UnpivotClause [31-54]
              PathExpressionList [39-40]
                PathExpression [39-40]
                  Identifier(a) [39-40]
              PathExpression [45-46]
                Identifier(b) [45-46]
              UnpivotInItemList [50-53]
                UnpivotInItem [51-52]
                  PathExpressionList [51-52]
                    PathExpression [51-52]
                      Identifier(c) [51-52]
          UsingClause [55-63]
            Identifier(x) [61-62]
--
SELECT
  *
FROM
  t1
  INNER JOIN
  t2 UNPIVOT(a FOR b IN ((c)))
  USING(x)
==

# UNPIVOT on join input (cross join)
SELECT * FROM t1 CROSS JOIN t2 UNPIVOT(a for b in (c));
--
QueryStatement [0-54]
  Query [0-54]
    Select [0-54]
      SelectList [7-8]
        SelectColumn [7-8]
          Star(*) [7-8]
      FromClause [9-54]
        Join(CROSS) [17-54]
          TablePathExpression [14-16]
            PathExpression [14-16]
              Identifier(t1) [14-16]
          TablePathExpression [28-54]
            PathExpression [28-30]
              Identifier(t2) [28-30]
            UnpivotClause [31-54]
              PathExpressionList [39-40]
                PathExpression [39-40]
                  Identifier(a) [39-40]
              PathExpression [45-46]
                Identifier(b) [45-46]
              UnpivotInItemList [50-53]
                UnpivotInItem [51-52]
                  PathExpressionList [51-52]
                    PathExpression [51-52]
                      Identifier(c) [51-52]
--
SELECT
  *
FROM
  t1
  CROSS JOIN
  t2 UNPIVOT(a FOR b IN ((c)))
==

# alias on the result of the entire UNPIVOT
SELECT * FROM t UNPIVOT(a for b in (c)) AS t_unpivot;
--
QueryStatement [0-52]
  Query [0-52]
    Select [0-52]
      SelectList [7-8]
        SelectColumn [7-8]
          Star(*) [7-8]
      FromClause [9-52]
        TablePathExpression [14-52]
          PathExpression [14-15]
            Identifier(t) [14-15]
          UnpivotClause [16-52]
            PathExpressionList [24-25]
              PathExpression [24-25]
                Identifier(a) [24-25]
            PathExpression [30-31]
              Identifier(b) [30-31]
            UnpivotInItemList [35-38]
              UnpivotInItem [36-37]
                PathExpressionList [36-37]
                  PathExpression [36-37]
                    Identifier(c) [36-37]
            Alias [40-52]
              Identifier(t_unpivot) [43-52]
--
SELECT
  *
FROM
  t UNPIVOT(a FOR b IN ((c))) AS t_unpivot
==

# UNPIVOT on tvf result
SELECT * FROM MyTVF(t) UNPIVOT(a for b in (c));
--
QueryStatement [0-46]
  Query [0-46]
    Select [0-46]
      SelectList [7-8]
        SelectColumn [7-8]
          Star(*) [7-8]
      FromClause [9-46]
        TVF [14-46]
          PathExpression [14-19]
            Identifier(MyTVF) [14-19]
          TVFArgument [20-21]
            PathExpression [20-21]
              Identifier(t) [20-21]
          UnpivotClause [23-46]
            PathExpressionList [31-32]
              PathExpression [31-32]
                Identifier(a) [31-32]
            PathExpression [37-38]
              Identifier(b) [37-38]
            UnpivotInItemList [42-45]
              UnpivotInItem [43-44]
                PathExpressionList [43-44]
                  PathExpression [43-44]
                    Identifier(c) [43-44]
--
SELECT
  *
FROM
  MyTVF(t) UNPIVOT(a FOR b IN ((c)))
==

# UNPIVOT on tvf argument
SELECT * from MyTVF((SELECT * FROM t UNPIVOT(a for b in (c))));
--
QueryStatement [0-62]
  Query [0-62]
    Select [0-62]
      SelectList [7-8]
        SelectColumn [7-8]
          Star(*) [7-8]
      FromClause [9-62]
        TVF [14-62]
          PathExpression [14-19]
            Identifier(MyTVF) [14-19]
          TVFArgument [20-61]
            ExpressionSubquery [20-61]
              Query [21-60]
                Select [21-60]
                  SelectList [28-29]
                    SelectColumn [28-29]
                      Star(*) [28-29]
                  FromClause [30-60]
                    TablePathExpression [35-60]
                      PathExpression [35-36]
                        Identifier(t) [35-36]
                      UnpivotClause [37-60]
                        PathExpressionList [45-46]
                          PathExpression [45-46]
                            Identifier(a) [45-46]
                        PathExpression [51-52]
                          Identifier(b) [51-52]
                        UnpivotInItemList [56-59]
                          UnpivotInItem [57-58]
                            PathExpressionList [57-58]
                              PathExpression [57-58]
                                Identifier(c) [57-58]
--
SELECT
  *
FROM
  MyTVF((
    SELECT
      *
    FROM
      t UNPIVOT(a FOR b IN ((c)))
  ))
==

# UNPIVOT on subquery
SELECT * FROM (SELECT a, b, c FROM t) UNPIVOT(a for b in (c));
--
QueryStatement [0-61]
  Query [0-61]
    Select [0-61]
      SelectList [7-8]
        SelectColumn [7-8]
          Star(*) [7-8]
      FromClause [9-61]
        TableSubquery [14-61]
          Query [15-36]
            Select [15-36]
              SelectList [22-29]
                SelectColumn [22-23]
                  PathExpression [22-23]
                    Identifier(a) [22-23]
                SelectColumn [25-26]
                  PathExpression [25-26]
                    Identifier(b) [25-26]
                SelectColumn [28-29]
                  PathExpression [28-29]
                    Identifier(c) [28-29]
              FromClause [30-36]
                TablePathExpression [35-36]
                  PathExpression [35-36]
                    Identifier(t) [35-36]
          UnpivotClause [38-61]
            PathExpressionList [46-47]
              PathExpression [46-47]
                Identifier(a) [46-47]
            PathExpression [52-53]
              Identifier(b) [52-53]
            UnpivotInItemList [57-60]
              UnpivotInItem [58-59]
                PathExpressionList [58-59]
                  PathExpression [58-59]
                    Identifier(c) [58-59]
--
SELECT
  *
FROM
  (
    SELECT
      a,
      b,
      c
    FROM
      t
  ) UNPIVOT(a FOR b IN ((c)))
==

# UNPIVOT combined with other clauses
SELECT * FROM t UNPIVOT(a for b in (c))
WHERE a < 5 HAVING sum_zero = 1 LIMIT 10;
--
QueryStatement [0-80]
  Query [0-80]
    Select [0-71]
      SelectList [7-8]
        SelectColumn [7-8]
          Star(*) [7-8]
      FromClause [9-39]
        TablePathExpression [14-39]
          PathExpression [14-15]
            Identifier(t) [14-15]
          UnpivotClause [16-39]
            PathExpressionList [24-25]
              PathExpression [24-25]
                Identifier(a) [24-25]
            PathExpression [30-31]
              Identifier(b) [30-31]
            UnpivotInItemList [35-38]
              UnpivotInItem [36-37]
                PathExpressionList [36-37]
                  PathExpression [36-37]
                    Identifier(c) [36-37]
      WhereClause [40-51]
        BinaryExpression(<) [46-51]
          PathExpression [46-47]
            Identifier(a) [46-47]
          IntLiteral(5) [50-51]
      Having [52-71]
        BinaryExpression(=) [59-71]
          PathExpression [59-67]
            Identifier(sum_zero) [59-67]
          IntLiteral(1) [70-71]
    LimitOffset [72-80]
      IntLiteral(10) [78-80]
--
SELECT
  *
FROM
  t UNPIVOT(a FOR b IN ((c)))
WHERE
  a < 5
HAVING sum_zero = 1
LIMIT 10
==

# UNPIVOT combined with TABLESAMPLE
SELECT * FROM
t UNPIVOT(a for b in (C)) {{AS t_unpivot|}}
TABLESAMPLE RESERVOIR (100 ROWS) REPEATABLE(10)
--
ALTERNATION GROUP: AS t_unpivot
--
QueryStatement [0-100]
  Query [0-100]
    Select [0-100]
      SelectList [7-8]
        SelectColumn [7-8]
          Star(*) [7-8]
      FromClause [9-100]
        TablePathExpression [14-100]
          PathExpression [14-15]
            Identifier(t) [14-15]
          UnpivotClause [16-52]
            PathExpressionList [24-25]
              PathExpression [24-25]
                Identifier(a) [24-25]
            PathExpression [30-31]
              Identifier(b) [30-31]
            UnpivotInItemList [35-38]
              UnpivotInItem [36-37]
                PathExpressionList [36-37]
                  PathExpression [36-37]
                    Identifier(C) [36-37]
            Alias [40-52]
              Identifier(t_unpivot) [43-52]
          SampleClause [53-100]
            Identifier(RESERVOIR) [65-74]
            SampleSize [76-84]
              IntLiteral(100) [76-79]
            SampleSuffix [86-100]
              RepeatableClause [86-100]
                IntLiteral(10) [97-99]
--
SELECT
  *
FROM
  t UNPIVOT(a FOR b IN ((C))) AS t_unpivot TABLESAMPLE RESERVOIR(100 ROWS) REPEATABLE (10)
--
ALTERNATION GROUP: <empty>
--
QueryStatement [0-88]
  Query [0-88]
    Select [0-88]
      SelectList [7-8]
        SelectColumn [7-8]
          Star(*) [7-8]
      FromClause [9-88]
        TablePathExpression [14-88]
          PathExpression [14-15]
            Identifier(t) [14-15]
          UnpivotClause [16-39]
            PathExpressionList [24-25]
              PathExpression [24-25]
                Identifier(a) [24-25]
            PathExpression [30-31]
              Identifier(b) [30-31]
            UnpivotInItemList [35-38]
              UnpivotInItem [36-37]
                PathExpressionList [36-37]
                  PathExpression [36-37]
                    Identifier(C) [36-37]
          SampleClause [41-88]
            Identifier(RESERVOIR) [53-62]
            SampleSize [64-72]
              IntLiteral(100) [64-67]
            SampleSuffix [74-88]
              RepeatableClause [74-88]
                IntLiteral(10) [85-87]
--
SELECT
  *
FROM
  t UNPIVOT(a FOR b IN ((C))) TABLESAMPLE RESERVOIR(100 ROWS) REPEATABLE (10)
==

# UNPIVOT combined with TABLESAMPLE and alias
SELECT * FROM
t UNPIVOT(a for b in (c))
AS t_unpivot TABLESAMPLE RESERVOIR (100 ROWS) REPEATABLE(10)
--
QueryStatement [0-100]
  Query [0-100]
    Select [0-100]
      SelectList [7-8]
        SelectColumn [7-8]
          Star(*) [7-8]
      FromClause [9-100]
        TablePathExpression [14-100]
          PathExpression [14-15]
            Identifier(t) [14-15]
          UnpivotClause [16-52]
            PathExpressionList [24-25]
              PathExpression [24-25]
                Identifier(a) [24-25]
            PathExpression [30-31]
              Identifier(b) [30-31]
            UnpivotInItemList [35-38]
              UnpivotInItem [36-37]
                PathExpressionList [36-37]
                  PathExpression [36-37]
                    Identifier(c) [36-37]
            Alias [40-52]
              Identifier(t_unpivot) [43-52]
          SampleClause [53-100]
            Identifier(RESERVOIR) [65-74]
            SampleSize [76-84]
              IntLiteral(100) [76-79]
            SampleSuffix [86-100]
              RepeatableClause [86-100]
                IntLiteral(10) [97-99]
--
SELECT
  *
FROM
  t UNPIVOT(a FOR b IN ((c))) AS t_unpivot TABLESAMPLE RESERVOIR(100 ROWS) REPEATABLE (10)
==

# UNPIVOT on time-travel table
SELECT * FROM
(SELECT * FROM t FOR SYSTEM TIME AS OF '2018-01-01')
UNPIVOT(a for b in (c))
--
QueryStatement [0-90]
  Query [0-90]
    Select [0-90]
      SelectList [7-8]
        SelectColumn [7-8]
          Star(*) [7-8]
      FromClause [9-90]
        TableSubquery [14-90]
          Query [15-65]
            Select [15-65]
              SelectList [22-23]
                SelectColumn [22-23]
                  Star(*) [22-23]
              FromClause [24-65]
                TablePathExpression [29-65]
                  PathExpression [29-30]
                    Identifier(t) [29-30]
                  ForSystemTime [31-65]
                    StringLiteral('2018-01-01') [53-65]
          UnpivotClause [67-90]
            PathExpressionList [75-76]
              PathExpression [75-76]
                Identifier(a) [75-76]
            PathExpression [81-82]
              Identifier(b) [81-82]
            UnpivotInItemList [86-89]
              UnpivotInItem [87-88]
                PathExpressionList [87-88]
                  PathExpression [87-88]
                    Identifier(c) [87-88]
--
SELECT
  *
FROM
  (
    SELECT
      *
    FROM
      t FOR SYSTEM_TIME AS OF '2018-01-01'
  ) UNPIVOT(a FOR b IN ((c)))
==

# time-travel on unpivot result
SELECT * FROM
t
UNPIVOT(a for b in (c))
FOR SYSTEM TIME AS OF '2018-01-01';
--
ERROR: Syntax error: UNPIVOT and FOR SYSTEM TIME AS OF may not be combined [at 4:1]
FOR SYSTEM TIME AS OF '2018-01-01';
^
==

# Table alias named "UNPIVOT" - OK because UNPIVOT is a non-reserved keyword.
SELECT * FROM t UNPIVOT;
--
QueryStatement [0-23]
  Query [0-23]
    Select [0-23]
      SelectList [7-8]
        SelectColumn [7-8]
          Star(*) [7-8]
      FromClause [9-23]
        TablePathExpression [14-23]
          PathExpression [14-15]
            Identifier(t) [14-15]
          Alias [16-23]
            Identifier(UNPIVOT) [16-23]
--
SELECT
  *
FROM
  t AS UNPIVOT
==

# ERROR: Unpivot clause containing only parens
SELECT * FROM t UNPIVOT();
--
ERROR: Syntax error: Unexpected ")" [at 1:25]
SELECT * FROM t UNPIVOT();
                        ^
==

# ERROR: Unpivot clause with only unpivot expr
SELECT * FROM t UNPIVOT(x);
--
ERROR: Syntax error: Expected keyword FOR but got ")" [at 1:26]
SELECT * FROM t UNPIVOT(x);
                         ^
==

# ERROR: Unpivot clause with only unpivot expr and FOR expr
SELECT * FROM t UNPIVOT(x FOR y);
--
ERROR: Syntax error: Expected "." or keyword IN but got ")" [at 1:32]
SELECT * FROM t UNPIVOT(x FOR y);
                               ^
==

# ERROR: Empty IN-list
SELECT * FROM t UNPIVOT(x FOR y IN ());
--
ERROR: Syntax error: Unexpected ")" [at 1:37]
SELECT * FROM t UNPIVOT(x FOR y IN ());
                                    ^
==

# ERROR: Trailing comma in IN-list
SELECT * FROM t UNPIVOT(x FOR y IN (a,));
--
ERROR: Syntax error: Unexpected ")" [at 1:39]
SELECT * FROM t UNPIVOT(x FOR y IN (a,));
                                      ^
==

# ERROR: Missing right-parenthesis
SELECT * FROM t UNPIVOT(x FOR y IN (a);
--
ERROR: Syntax error: Expected ")" but got ";" [at 1:39]
SELECT * FROM t UNPIVOT(x FOR y IN (a);
                                      ^
==

# ERROR: Missing unpivot output columns
SELECT * FROM t UNPIVOT(FOR y IN (a));
--
ERROR: Syntax error: Unexpected keyword FOR [at 1:25]
SELECT * FROM t UNPIVOT(FOR y IN (a));
                        ^
==

# ERROR: Trailing comma after last unpivot output column
SELECT * FROM t UNPIVOT(x, y, FOR a IN (b));
--
ERROR: Syntax error: Expected keyword FOR but got "," [at 1:26]
SELECT * FROM t UNPIVOT(x, y, FOR a IN (b));
                         ^
==

# UNPIVOT as identifier outside of table context
SELECT UNPIVOT;
--
QueryStatement [0-14]
  Query [0-14]
    Select [0-14]
      SelectList [7-14]
        SelectColumn [7-14]
          PathExpression [7-14]
            Identifier(UNPIVOT) [7-14]
--
SELECT
  UNPIVOT
==

# UNPIVOT AS alias using AS keyword
SELECT * FROM t AS UNPIVOT;
--
QueryStatement [0-26]
  Query [0-26]
    Select [0-26]
      SelectList [7-8]
        SelectColumn [7-8]
          Star(*) [7-8]
      FromClause [9-26]
        TablePathExpression [14-26]
          PathExpression [14-15]
            Identifier(t) [14-15]
          Alias [16-26]
            Identifier(UNPIVOT) [19-26]
--
SELECT
  *
FROM
  t AS UNPIVOT
==

# UNPIVOT AS alias of table produced by a UNPIVOT clause.
SELECT * FROM t UNPIVOT(a FOR b IN (c)) UNPIVOT;
--
QueryStatement [0-47]
  Query [0-47]
    Select [0-47]
      SelectList [7-8]
        SelectColumn [7-8]
          Star(*) [7-8]
      FromClause [9-47]
        TablePathExpression [14-47]
          PathExpression [14-15]
            Identifier(t) [14-15]
          UnpivotClause [16-47]
            PathExpressionList [24-25]
              PathExpression [24-25]
                Identifier(a) [24-25]
            PathExpression [30-31]
              Identifier(b) [30-31]
            UnpivotInItemList [35-38]
              UnpivotInItem [36-37]
                PathExpressionList [36-37]
                  PathExpression [36-37]
                    Identifier(c) [36-37]
            Alias [40-47]
              Identifier(UNPIVOT) [40-47]
--
SELECT
  *
FROM
  t UNPIVOT(a FOR b IN ((c))) AS UNPIVOT
==

# TVF named "PIVOT".
SELECT * FROM UNPIVOT(t);
--
QueryStatement [0-24]
  Query [0-24]
    Select [0-24]
      SelectList [7-8]
        SelectColumn [7-8]
          Star(*) [7-8]
      FromClause [9-24]
        TVF [14-24]
          PathExpression [14-21]
            Identifier(UNPIVOT) [14-21]
          TVFArgument [22-23]
            PathExpression [22-23]
              Identifier(t) [22-23]
--
SELECT
  *
FROM
  UNPIVOT(t)
==

# UNPIVOT with empty IN-list
SELECT * FROM t UNPIVOT(a for b in ());
--
ERROR: Syntax error: Unexpected ")" [at 1:37]
SELECT * FROM t UNPIVOT(a for b in ());
                                    ^
==

# UNPIVOT combined with TABLESAMPLE and alias (without AS keyword)
SELECT * FROM
t UNPIVOT(a for b in (c))
t_unpivot TABLESAMPLE RESERVOIR (100 ROWS) REPEATABLE(10)
--
QueryStatement [0-97]
  Query [0-97]
    Select [0-97]
      SelectList [7-8]
        SelectColumn [7-8]
          Star(*) [7-8]
      FromClause [9-97]
        TablePathExpression [14-97]
          PathExpression [14-15]
            Identifier(t) [14-15]
          UnpivotClause [16-49]
            PathExpressionList [24-25]
              PathExpression [24-25]
                Identifier(a) [24-25]
            PathExpression [30-31]
              Identifier(b) [30-31]
            UnpivotInItemList [35-38]
              UnpivotInItem [36-37]
                PathExpressionList [36-37]
                  PathExpression [36-37]
                    Identifier(c) [36-37]
            Alias [40-49]
              Identifier(t_unpivot) [40-49]
          SampleClause [50-97]
            Identifier(RESERVOIR) [62-71]
            SampleSize [73-81]
              IntLiteral(100) [73-76]
            SampleSuffix [83-97]
              RepeatableClause [83-97]
                IntLiteral(10) [94-96]
--
SELECT
  *
FROM
  t UNPIVOT(a FOR b IN ((c))) AS t_unpivot TABLESAMPLE RESERVOIR(100 ROWS) REPEATABLE (10)
==

# ERROR: Multiple pivot modifiers on the same table
SELECT * FROM t
UNPIVOT(a for b in (c))
UNPIVOT(a for b in (c));
--
ERROR: Syntax error: Expected end of input but got "(" [at 3:8]
UNPIVOT(a for b in (c));
       ^
==

# ERROR: The only columns that are allowed to be aliased are the unpivot value columns.
SELECT * FROM t UNPIVOT(x {{AS y|AS}} FROM c IN (z))
--
ALTERNATION GROUP: AS y
--
ERROR: Syntax error: Expected keyword FOR but got keyword AS [at 1:27]
SELECT * FROM t UNPIVOT(x AS y FROM c IN (z))
                          ^
--
ALTERNATION GROUP: AS
--
ERROR: Syntax error: Expected keyword FOR but got keyword AS [at 1:27]
SELECT * FROM t UNPIVOT(x AS FROM c IN (z))
                          ^
==

# ERROR: unpivot output columns aren't allowed to be expressions.
SELECT * FROM t UNPIVOT({{x + y AS z|(x + y)}} FROM a IN (b))
--
ALTERNATION GROUP: x + y AS z
--
ERROR: Syntax error: Expected keyword FOR but got "+" [at 1:27]
SELECT * FROM t UNPIVOT(x + y AS z FROM a IN (b))
                          ^
--
ALTERNATION GROUP: (x + y)
--
ERROR: Syntax error: Expected ")" or "," but got "+" [at 1:28]
SELECT * FROM t UNPIVOT((x + y) FROM a IN (b))
                           ^
==

# ERROR: AS keyword as alias.
SELECT * FROM t UNPIVOT(a FOR b IN (x AS,y));
--
ERROR: Syntax error: Expected integer literal or string literal but got "," [at 1:41]
SELECT * FROM t UNPIVOT(a FOR b IN (x AS,y));
                                        ^
==

# The SQL Standard allows a parenthesized column list to follow a table alias.
# ZetaSQL does not support this, but make sure that, when the table alias is
# "PIVOT", the query fails.
SELECT * FROM t UNPIVOT({{x|x,|x,y|x,y,}});
--
ALTERNATION GROUP: x
--
ERROR: Syntax error: Expected keyword FOR but got ")" [at 1:26]
SELECT * FROM t UNPIVOT(x);
                         ^
--
ALTERNATION GROUP: x,
--
ERROR: Syntax error: Expected keyword FOR but got "," [at 1:26]
SELECT * FROM t UNPIVOT(x,);
                         ^
--
ALTERNATION GROUP: x,y
--
ERROR: Syntax error: Expected keyword FOR but got "," [at 1:26]
SELECT * FROM t UNPIVOT(x,y);
                         ^
--
ALTERNATION GROUP: x,y,
--
ERROR: Syntax error: Expected keyword FOR but got "," [at 1:26]
SELECT * FROM t UNPIVOT(x,y,);
                         ^
==

# ERROR: WITH OFFSET on pivot result (with and without alias)
SELECT * FROM
t
UNPIVOT(a for b in (c)) {{AS t_alias|t_alias|}}
WITH OFFSET {{AS t_alias|t_alias|}};
--
ALTERNATION GROUPS:
    AS t_alias,AS t_alias
    t_alias,AS t_alias
    AS t_alias
--
ERROR: UNPIVOT and WITH OFFSET cannot be combined [at 4:1]
WITH OFFSET AS t_alias;
^
--
ALTERNATION GROUPS:
    AS t_alias,t_alias
    t_alias,t_alias
    t_alias
--
ERROR: UNPIVOT and WITH OFFSET cannot be combined [at 4:1]
WITH OFFSET t_alias;
^
--
ALTERNATION GROUPS:
    AS t_alias,
    t_alias,
    <empty>
--
ERROR: UNPIVOT and WITH OFFSET cannot be combined [at 4:1]
WITH OFFSET ;
^
==

# Alias on input table of UNPIVOT, both with and without AS keyword.
SELECT * FROM t {{AS|}} t1 UNPIVOT(a FOR b IN (c));
--
ALTERNATION GROUP: AS
--
QueryStatement [0-45]
  Query [0-45]
    Select [0-45]
      SelectList [7-8]
        SelectColumn [7-8]
          Star(*) [7-8]
      FromClause [9-45]
        TablePathExpression [14-45]
          PathExpression [14-15]
            Identifier(t) [14-15]
          Alias [16-21]
            Identifier(t1) [19-21]
          UnpivotClause [22-45]
            PathExpressionList [30-31]
              PathExpression [30-31]
                Identifier(a) [30-31]
            PathExpression [36-37]
              Identifier(b) [36-37]
            UnpivotInItemList [41-44]
              UnpivotInItem [42-43]
                PathExpressionList [42-43]
                  PathExpression [42-43]
                    Identifier(c) [42-43]
--
SELECT
  *
FROM
  t AS t1 UNPIVOT(a FOR b IN ((c)))
--
ALTERNATION GROUP: <empty>
--
QueryStatement [0-43]
  Query [0-43]
    Select [0-43]
      SelectList [7-8]
        SelectColumn [7-8]
          Star(*) [7-8]
      FromClause [9-43]
        TablePathExpression [14-43]
          PathExpression [14-15]
            Identifier(t) [14-15]
          Alias [17-19]
            Identifier(t1) [17-19]
          UnpivotClause [20-43]
            PathExpressionList [28-29]
              PathExpression [28-29]
                Identifier(a) [28-29]
            PathExpression [34-35]
              Identifier(b) [34-35]
            UnpivotInItemList [39-42]
              UnpivotInItem [40-41]
                PathExpressionList [40-41]
                  PathExpression [40-41]
                    Identifier(c) [40-41]
--
SELECT
  *
FROM
  t AS t1 UNPIVOT(a FOR b IN ((c)))
==

# Alias on both input table and result of UNPIVOT,
# both with and without AS keyword.
SELECT * FROM t {{AS|}} t1 UNPIVOT(a FOR b IN (c)) {{AS|}} t2;
--
ALTERNATION GROUP: AS,AS
--
QueryStatement [0-51]
  Query [0-51]
    Select [0-51]
      SelectList [7-8]
        SelectColumn [7-8]
          Star(*) [7-8]
      FromClause [9-51]
        TablePathExpression [14-51]
          PathExpression [14-15]
            Identifier(t) [14-15]
          Alias [16-21]
            Identifier(t1) [19-21]
          UnpivotClause [22-51]
            PathExpressionList [30-31]
              PathExpression [30-31]
                Identifier(a) [30-31]
            PathExpression [36-37]
              Identifier(b) [36-37]
            UnpivotInItemList [41-44]
              UnpivotInItem [42-43]
                PathExpressionList [42-43]
                  PathExpression [42-43]
                    Identifier(c) [42-43]
            Alias [46-51]
              Identifier(t2) [49-51]
--
SELECT
  *
FROM
  t AS t1 UNPIVOT(a FOR b IN ((c))) AS t2
--
ALTERNATION GROUP: AS,
--
QueryStatement [0-49]
  Query [0-49]
    Select [0-49]
      SelectList [7-8]
        SelectColumn [7-8]
          Star(*) [7-8]
      FromClause [9-49]
        TablePathExpression [14-49]
          PathExpression [14-15]
            Identifier(t) [14-15]
          Alias [16-21]
            Identifier(t1) [19-21]
          UnpivotClause [22-49]
            PathExpressionList [30-31]
              PathExpression [30-31]
                Identifier(a) [30-31]
            PathExpression [36-37]
              Identifier(b) [36-37]
            UnpivotInItemList [41-44]
              UnpivotInItem [42-43]
                PathExpressionList [42-43]
                  PathExpression [42-43]
                    Identifier(c) [42-43]
            Alias [47-49]
              Identifier(t2) [47-49]
--
SELECT
  *
FROM
  t AS t1 UNPIVOT(a FOR b IN ((c))) AS t2
--
ALTERNATION GROUP: AS
--
QueryStatement [0-49]
  Query [0-49]
    Select [0-49]
      SelectList [7-8]
        SelectColumn [7-8]
          Star(*) [7-8]
      FromClause [9-49]
        TablePathExpression [14-49]
          PathExpression [14-15]
            Identifier(t) [14-15]
          Alias [17-19]
            Identifier(t1) [17-19]
          UnpivotClause [20-49]
            PathExpressionList [28-29]
              PathExpression [28-29]
                Identifier(a) [28-29]
            PathExpression [34-35]
              Identifier(b) [34-35]
            UnpivotInItemList [39-42]
              UnpivotInItem [40-41]
                PathExpressionList [40-41]
                  PathExpression [40-41]
                    Identifier(c) [40-41]
            Alias [44-49]
              Identifier(t2) [47-49]
--
SELECT
  *
FROM
  t AS t1 UNPIVOT(a FOR b IN ((c))) AS t2
--
ALTERNATION GROUP: <empty>
--
QueryStatement [0-47]
  Query [0-47]
    Select [0-47]
      SelectList [7-8]
        SelectColumn [7-8]
          Star(*) [7-8]
      FromClause [9-47]
        TablePathExpression [14-47]
          PathExpression [14-15]
            Identifier(t) [14-15]
          Alias [17-19]
            Identifier(t1) [17-19]
          UnpivotClause [20-47]
            PathExpressionList [28-29]
              PathExpression [28-29]
                Identifier(a) [28-29]
            PathExpression [34-35]
              Identifier(b) [34-35]
            UnpivotInItemList [39-42]
              UnpivotInItem [40-41]
                PathExpressionList [40-41]
                  PathExpression [40-41]
                    Identifier(c) [40-41]
            Alias [45-47]
              Identifier(t2) [45-47]
--
SELECT
  *
FROM
  t AS t1 UNPIVOT(a FOR b IN ((c))) AS t2
==

# UNPIVOT on UNNEST() is an error on the resolver (because unnest() returns a
# value table), but it's allowed on the parser layer.
# Test both with and without a WITH OFFSET clause.
SELECT * FROM UNNEST([1, 2, 3]) {{WITH OFFSET|WITH OFFSET x|WITH OFFSET AS x|}}
UNPIVOT(a for b in (c)) AS x;
--
ALTERNATION GROUP: WITH OFFSET
--
ERROR: Syntax error: Expected end of input but got "(" [at 2:8]
UNPIVOT(a for b in (c)) AS x;
       ^
--
ALTERNATION GROUPS:
    WITH OFFSET x
    WITH OFFSET AS x
--
ERROR: Syntax error: Expected end of input but got keyword UNPIVOT [at 2:1]
UNPIVOT(a for b in (c)) AS x;
^
--
ALTERNATION GROUP: <empty>
--
QueryStatement [0-61]
  Query [0-61]
    Select [0-61]
      SelectList [7-8]
        SelectColumn [7-8]
          Star(*) [7-8]
      FromClause [9-61]
        TablePathExpression [14-61]
          UnnestExpression [14-31]
            ArrayConstructor [21-30]
              IntLiteral(1) [22-23]
              IntLiteral(2) [25-26]
              IntLiteral(3) [28-29]
          UnpivotClause [33-61]
            PathExpressionList [41-42]
              PathExpression [41-42]
                Identifier(a) [41-42]
            PathExpression [47-48]
              Identifier(b) [47-48]
            UnpivotInItemList [52-55]
              UnpivotInItem [53-54]
                PathExpressionList [53-54]
                  PathExpression [53-54]
                    Identifier(c) [53-54]
            Alias [57-61]
              Identifier(x) [60-61]
--
SELECT
  *
FROM
  UNNEST(ARRAY[1, 2, 3]) UNPIVOT(a FOR b IN ((c))) AS x
==

# Qualified references to column from input table within unpivot clause
SELECT * FROM t UNPIVOT(t.a FOR t.b IN (c)) {{AS|}} t2;
--
ALTERNATION GROUP: AS
--
QueryStatement [0-49]
  Query [0-49]
    Select [0-49]
      SelectList [7-8]
        SelectColumn [7-8]
          Star(*) [7-8]
      FromClause [9-49]
        TablePathExpression [14-49]
          PathExpression [14-15]
            Identifier(t) [14-15]
          UnpivotClause [16-49]
            PathExpressionList [24-27]
              PathExpression [24-27]
                Identifier(t) [24-25]
                Identifier(a) [26-27]
            PathExpression [32-35]
              Identifier(t) [32-33]
              Identifier(b) [34-35]
            UnpivotInItemList [39-42]
              UnpivotInItem [40-41]
                PathExpressionList [40-41]
                  PathExpression [40-41]
                    Identifier(c) [40-41]
            Alias [44-49]
              Identifier(t2) [47-49]
--
SELECT
  *
FROM
  t UNPIVOT(t.a FOR t.b IN ((c))) AS t2
--
ALTERNATION GROUP: <empty>
--
QueryStatement [0-47]
  Query [0-47]
    Select [0-47]
      SelectList [7-8]
        SelectColumn [7-8]
          Star(*) [7-8]
      FromClause [9-47]
        TablePathExpression [14-47]
          PathExpression [14-15]
            Identifier(t) [14-15]
          UnpivotClause [16-47]
            PathExpressionList [24-27]
              PathExpression [24-27]
                Identifier(t) [24-25]
                Identifier(a) [26-27]
            PathExpression [32-35]
              Identifier(t) [32-33]
              Identifier(b) [34-35]
            UnpivotInItemList [39-42]
              UnpivotInItem [40-41]
                PathExpressionList [40-41]
                  PathExpression [40-41]
                    Identifier(c) [40-41]
            Alias [45-47]
              Identifier(t2) [45-47]
--
SELECT
  *
FROM
  t UNPIVOT(t.a FOR t.b IN ((c))) AS t2
==

# ERROR: FOR expr with its own IN clause (no parentheses)
SELECT * FROM t
UNPIVOT (a FOR y IN (x, z) IN (c,d));
--
ERROR: Syntax error: Expected ")" but got keyword IN [at 2:28]
UNPIVOT (a FOR y IN (x, z) IN (c,d));
                           ^
==

# ERROR: FOR expr with its own IN clause (with parentheses)
SELECT * FROM t
UNPIVOT(a FOR (y IN (1, 2)) IN (c,d));
--
ERROR: Syntax error: Unexpected "(" [at 2:15]
UNPIVOT(a FOR (y IN (1, 2)) IN (c,d));
              ^
